Stylesheet/emote/tag updates 2015-03-09

--- a/source-css/ariablaze.css
+++ b/source-css/ariablaze.css
@@ -93,6 +93,7 @@ a[href|="/assonata"], a[href|="/assd"] {
 .sidecontentbox .helplink + .title h1:before { font-size: 10pt !important; content: "ROADIES" }
 
 .md { overflow: auto; }
+.usertext-edit .md { overflow: inherit; }
 
 .flair
 {
