--- a/source-css/cheesesandwichmlp.css
+++ b/source-css/cheesesandwichmlp.css
@@ -247,6 +247,7 @@ a[href|="/sp"] {
 /*** Emotes ***/
 
 .md { overflow: auto; }
+.usertext-edit .md { overflow: inherit; }
 
 a[href|="/cheese"], a[href|="/boneless"], a[href|="/cheesesquint"], a[href|="/cheesestare"], a[href|="/imfine"], a[href|="/cheesechill"], a[href|="/cheesemad"], a[href|="/sarcasticcheese"],
 a[href|="/pentiums"], a[href|="/cheeseponders"] {
