--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -1269,28 +1269,34 @@ a[href|="/ripferrbearand20"] {
 /*Name Changes are Below*/
 
 a.author[href$="BlameTheJungler"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="BlameTheJungler"]:before {font-size:10px!important; visibility:visible!important; content: "LeafOnTheWind"}
+a.author[href$="BlameTheJungler"]:before {font-size:10px!important; visibility:visible!important; content: "LeafOnTheWind "}
 
 a.author[href$="DaylightDarkle"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="DaylightDarkle"]:before {font-size:10px!important; visibility:visible!important; content: "Day1ightDark1e"}
+a.author[href$="DaylightDarkle"]:before {font-size:10px!important; visibility:visible!important; content: "Day1ightDark1e "}
 
 a.author[href$="Peacefulzealot"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="Peacefulzealot"]:before {font-size:10px!important; visibility:visible!important; content: "CenturyZellyBelly"}
+a.author[href$="Peacefulzealot"]:before {font-size:10px!important; visibility:visible!important; content: "CenturyZellyBelly "}
 
 a.author[href$="HeWho_MustNotBeNamed"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="HeWho_MustNotBeNamed"]:before {font-size:10px!important; visibility:visible!important; content: "HeWho_MustNotBeNamedEh?"}
+a.author[href$="HeWho_MustNotBeNamed"]:before {font-size:10px!important; visibility:visible!important; content: "HeWho_MustNotBeNamedEh? "}
 
 a.author[href$="Fuzzy_Gauntlets"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="Fuzzy_Gauntlets"]:before {font-size:10px!important; visibility:visible!important; content: "Raunchy_Gauntlets"}
+a.author[href$="Fuzzy_Gauntlets"]:before {font-size:10px!important; visibility:visible!important; content: "Cattle_Ranch_Gauntlets "}
 
 a.author[href$="1125a"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="1125a"]:before {font-size:10px!important; visibility:visible!important; content: "1125au"}
+a.author[href$="1125a"]:before {font-size:10px!important; visibility:visible!important; content: "1125au "}
 
 a.author[href$="Eevn"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="Eevn"]:before {font-size:10px!important; visibility:visible!important; content: "Even"}
+a.author[href$="Eevn"]:before {font-size:10px!important; visibility:visible!important; content: "Eveny "}
 
 a.author[href$="Ootachiful"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="Ootachiful"]:before {font-size:10px!important; visibility:visible!important; content: "Ootachoful"}
+a.author[href$="Ootachiful"]:before {font-size:10px!important; visibility:visible!important; content: "Ouitachiful "}
+
+a.author[href$="french_guy_al"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
+a.author[href$="french_guy_al"]:before {font-size:10px!important; visibility:visible!important; content: "everton_relegated_al "}
+
+a.author[href$="TheDarkPR101"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
+a.author[href$="TheDarkPR101"]:before {font-size:10px!important; visibility:visible!important; content: "TsarDarkPR101 "}
 
 .sidecontentbox a.author[href$="Pinkie_Pie"] {font-size:0!important; overflow:hidden; display:none; content: "";}
 .sidecontentbox a.author[href$="DoomedCivilian"] {color: #E9B3F9}
