--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -323,6 +323,7 @@ body .disabled .morelink a:hover {
     ************************/
 
 .md { overflow: auto; }
+.usertext-edit .md { overflow: inherit; }
 
     /**************
     A Emoticons
