--- a/source-css/applefritter.css
+++ b/source-css/applefritter.css
@@ -282,6 +282,7 @@ a[href|="/sp"] {
 /*** Emotes ***/
 
 .md { overflow: auto; }
+.usertext-edit .md { overflow: inherit; }
 
 a[href|="/fritapple"], a[href|="/fritsmirk"], a[href|="/fritgrin"], a[href|="/fritshrug"], a[href|="/fritbow"], a[href|="/frithmph"], a[href|="/fritnoway"], a[href|="/fritsmeel"], a[href|="/fritsad"], a[href|="/fritsmile"], a[href|="/frithappy"], a[href|="/fritbbbff"], a[href|="/fritwhat"], a[href|="/frityay"], a[href|="/fritter"], a[href|="/fritlie"], a[href|="/fritmad"], a[href|="/fritderp"], a[href|="/frithoof"], a[href|="/fritspet"], a[href|="/fritbake"], a[href|="/fritblush"], a[href|="/fritjoke"], a[href|="/fritsalute"], a[href|="/frithmmm"] {
     display: block;
