--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -443,7 +443,7 @@ a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[hr
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70b 'motes */
-a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"], a[href|="/karmasquint"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/trixiedafaq"], a[href|="/queensmeel"], a[href|="/queenglee"]
+a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"], a[href|="/karmasquint"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/trixiedafaq"], a[href|="/queensmeel"], a[href|="/queenglee"], a[href|="/pinkieainthavingthatshit"]
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -540,7 +540,7 @@ a[href|="/cadscience"], a[href|="/appul"], a[href|="/sadprincesshorse"], a[href|
 {background-image:url(%%misfitsk%%);display:block;float:left;}
 
 /* Misfits l */
-a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/sombraheart"], a[href|="/teamtaco"], a[href|="/ablick"], a[href|="/cmcship"], a[href|="/swappleaww"], a[href|="/flutterbutter"], a[href|="/twilightthebearded"], a[href|="/creepershy"], a[href|="/engineeraj"], a[href|="/youflunk"], a[href|="/bloombatsquee"]
+a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/sombraheart"], a[href|="/teamtaco"], a[href|="/ablick"], a[href|="/cmcship"], a[href|="/swappleaww"], a[href|="/flutterbutter"], a[href|="/twilightthebearded"], a[href|="/creepershy"], a[href|="/engineeraj"], a[href|="/youflunk"], a[href|="/bloombatsquee"], a[href|="/bloombow"], a[href|="/sockies"]
 {background-image:url(%%misfitsl%%);display:block;float:left;}
 
 /*
@@ -636,7 +636,7 @@ a[href|="/zerofucks"], a[href|="/greaserspike"], a[href|="/rdtwipride"], a[href|
 {background-position: 0 -700%;}
 
 /* Grid pos 1,7 'motes */
-a[href|="/pinkiestare"], a[href|="/nerdoctavia"], a[href|="/nerdtavi"], a[href|="/rdtwismile"], a[href|="/karmawat"]
+a[href|="/pinkiestare"], a[href|="/nerdoctavia"], a[href|="/nerdtavi"], a[href|="/rdtwismile"], a[href|="/karmawat"], a[href|="/pinkieainthavingthatshit"]
 {background-position: -100% -700%;}
 
 /* Grid pos 2,7 'motes */
@@ -1234,3 +1234,5 @@ a[href|="/creepershy"] {width:117px;height:150px;background-position: -457px -99
 a[href|="/engineeraj"] {width:200px;height:124px;background-position: -319px -249px;}
 a[href|="/youflunk"] {width:87px;height:135px;background-position: -615px 0;}
 a[href|="/bloombatsquee"] {width:99px;height:120px;background-position: -603px -135px;}
+a[href|="/bloombow"] {width:125px;height:150px;background-position: -519px -255px;}
+a[href|="/sockies"] {width:200px;height:140px;background-position: -319px -373px;}
