CSS fixes continued

--- a/addon/extracss-pure.css
+++ b/addon/extracss-pure.css
@@ -407,6 +407,7 @@
 
 .md { overflow-y: hidden !important }
 .usertext-edit .md { overflow-y: inherit !important; }
+.usertext-edit .md.RESDialogContents { overflow-y: hidden !important; }
 .titlebox .md { overflow-y: inherit !important; }
 
 @keyframes intensifies {
