--- a/addon/extracss-webkit.css
+++ b/addon/extracss-webkit.css
@@ -399,6 +399,7 @@
 
 .md { overflow-y: hidden !important }
 .usertext-edit .md { overflow-y: inherit !important; }
+.usertext-edit .md.RESDialogContents { overflow-y: hidden !important; }
 .titlebox .md { overflow-y: inherit !important; }
 
 @-webkit-keyframes intensifies {
