--- a/source-css/clopmotes.css
+++ b/source-css/clopmotes.css
@@ -357,7 +357,7 @@ a[href|="/plotpair"], a[href|="/lickusclean"], a[href|="/tootight"], a[href|="/c
 {background-image:url(%%250x250a%%);width:250px;height:250px;display:block;float:left;}
 
 /* 250x250b 'motes. */
-a[href|="/futafap"]
+a[href|="/futafap"], a[href|="/futopen"]
 {background-image:url(%%250x250b%%);width:250px;height:250px;display:block;float:left;}
 
 /* 300x300a 'motes */
@@ -369,7 +369,7 @@ a[href|="/examplecode1"], a[href|="/examplecode2"], a[href|="/shykisscock"],a[hr
 {background-position: 0 0;}
 
 /* Grid pos 1,0 'motes */
-a[href|="/festivebuttplug"], a[href|="/lickusclean"], a[href|="/seductivecadance"], a[href|="/nightcest"]
+a[href|="/festivebuttplug"], a[href|="/lickusclean"], a[href|="/seductivecadance"], a[href|="/nightcest"], a[href|="/futopen"]
 {background-position: -100% 0%;}
 
 /* Grid pos 2,0 'motes */
@@ -449,8 +449,16 @@ a[href|="/ajcumshot"], a[href|="/twihearts"], a[href|="/bookcatbird"], a[href|="
 {background-image:url(%%misfitsh%%);display:block;float:left;}
 
 /* Misfits i */
-a[href|="/ediblelove"], a[href|="/artimiscock"], a[href|="/presentingcolgate"], a[href|="/rule63"], a[href|="/fucktheworld"], a[href|="/facedownassup"]
+a[href|="/ediblelove"], a[href|="/artimiscock"], a[href|="/presentingcolgate"], a[href|="/rule63"], a[href|="/fucktheworld"], a[href|="/facedownassup"], a[href|="/colgatestroll"]
 {background-image:url(%%misfitsi%%);display:block;float:left;}
+
+/* Misfits j */
+a[href|="/lyrapresents"], a[href|="/abouttoburst"], a[href|="/suckitcowboy"], a[href|="/blueballs"], a[href|="/trixiefun"], a[href|="/injectiontime"], a[href|="/hypercock"]
+{background-image:url(%%misfitsj%%);display:block;float:left;}
+
+/* Misfits k */
+a[href|="/entertainme"], a[href|="/trixiefinish"], a[href|="/rarifinish"], a[href|="/acexlefty"], a[href|="/starburstseduce"], a[href|="/lunamine"], a[href|="/queendrip"], a[href|="/rarisuck"] 
+{background-image:url(%%misfitsk%%);display:block;float:left;}
 
 /* Animated Emotes */
 a[href|="/twichug"], a[href|="/chugchugchug"] {background: url(%%chugchugchug%%) no-repeat;width:150px;height:116px;display:block;float:left;}
@@ -526,4 +534,20 @@ a[href|="/ediblelove"] {width: 167px;height:200px;background-position: 0px -180p
 a[href|="/rule63"] {width: 250px;height:151px;background-position: -168px -200px;}
 a[href|="/artimiscock"] {width: 250px;height:148px;background-position: 0px -380px;}
 a[href|="/presentingcolgate"] {width: 200px;height:157px;background-position: -250px -351px;}
+a[href|="/colgatestroll"] {width: 110px;height:200px;background-position: 0px -528px;}
+a[href|="/lyrapresents"] {width: 193px;height:139px;background-position: 0px 0px;}
+a[href|="/abouttoburst"] {width: 200px;height:181px;background-position: -193px 0px;}
+a[href|="/suckitcowboy"] {width: 195px;height:200px;background-position: 0px -139px;}
+a[href|="/blueballs"] {width: 199px;height:250px;background-position: -195px -181px;}
+a[href|="/trixiefun"] {width: 143px;height:200px;background-position: 0px -339px;}
+a[href|="/injectiontime"] {width: 182px;height:200px;background-position: -143px -431px;}
+a[href|="/hypercock"] {width: 182px;height:200px;background-position: 0px -631px;}
+a[href|="/entertainme"] {width: 250px;height:213px;background-position: 0px 0px;}
+a[href|="/trixiefinish"] {width: 250px;height:177px;background-position: -250px 0px;}
+a[href|="/rarifinish"] {width: 236px;height:250px;background-position: 0px -213px;}
+a[href|="/acexlefty"] {width: 200px;height:117px;background-position: -250px -177px;}
+a[href|="/starburstseduce"] {width: 132px;height:200px;background-position: -236px -294px;}
+a[href|="/lunamine"] {width: 194px;height:250px;background-position: 0px -463px;}
+a[href|="/queendrip"] {width: 167px;height:200px;background-position: -194px -494px;}
+a[href|="/rarisuck"] {width: 150px;height:125px;background-position: 0px -713px;}
 a[href|="/"] {width: 148px;height:150px;background-position: 0px -598px;}
