--- a/source-css/mlpoc.css
+++ b/source-css/mlpoc.css
@@ -859,6 +859,12 @@ border: 2px solid #d235e5; border-radius: 20px;
 padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
 background-color:#241919;}
 
+.flair-cheshire
+{ color:white; 
+border: 2px solid black; border-radius: 20px; 
+padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
+background-color:brown;}
+
 
 /* EMOTE SPRITESHEETS (BY CHARACTER) */
 
