--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -2,7 +2,7 @@
 
 /* Changes background  */
  body:first-of-type, body.res-nightmode:first-of-type {
-    background:  url(%%sanicbg%%)  no-repeat  fixed 66% 100% !important;
+    background:  url(%%spongebab%%)  no-repeat  fixed 66% 100% !important;
 }go
 
 
@@ -19,7 +19,7 @@
 /* Banner image and associated height values */
 
  #header #header-bottom-left {
-   background: url(%%SPAGEETBANER%%) 50% 0px !important;
+   background: url(%%bannerino%%) 50% 0px !important;
    background-repeat: no-repeat!important;
    background-position: 35% 0px;
 }
