--- a/source-css/sonatadusk.css
+++ b/source-css/sonatadusk.css
@@ -495,6 +495,12 @@ a[href|="/sonataponyshrug"],a[href|="/sdpshrug"]
 a[href|="/rsonataponyshrug"],a[href|="/rsdpshrug"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%ponysonata-sheet%%)!important; background-position: -200% -300%;}
 
+a[href|="/sonataooh"],a[href|="/sdooh"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%ponysonata-sheet%%)!important; background-position: -300% -200%;}
+
+a[href|="/rsonataooh"],a[href|="/rsdooh"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%ponysonata-sheet%%)!important; background-position: -300% -300%;}
+
 a[href|="/sonatabattle"],a[href|="/sdbattle"],a[href|="/rsonatabattle"],a[href|="/rsdbattle"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: 0 0;}
 
