--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -226,13 +226,13 @@ border-top-right-radius: 5px;
 {
  display:inline-block;
  float:right;
- background:url(%%discentia-portal-head%%);
+ background:url(%%crackle-portal%%);
  width:72px;
  height:42px;
- margin-top:-16px;
+ margin-top:-18px;
  margin-left:5px;
  margin-bottom:0px;
- margin-right:-29px;
+ margin-right:-39px;
 }
 
 .thumbnail:empty{background-image:url(%%thumbnails%%)!important}
