--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -455,7 +455,7 @@ a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100c 'motes */
-a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"], a[href|="/deeplyintriguedcadance"], a[href|="/vinylderp"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/trixieawkward"], a[href|="/tgaptsundere"]
+a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"], a[href|="/deeplyintriguedcadance"], a[href|="/vinylderp"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/trixieawkward"], a[href|="/tgaptsundere"], a[href|="/princesslenny"]
 {background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -475,7 +475,7 @@ a[href|="/poliwag"], a[href|="/venonat"], a[href|="/pikachu"], a[href|="/ghastly
 {background-image:url(%%150x150d%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150e 'motes */
-a[href|="/boopening"], a[href|="/agentt"]
+a[href|="/boopening"], a[href|="/agentt"], a[href|="/hoodiedash"]
 {background-image:url(%%150x150e%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -556,7 +556,7 @@ a[href|="/twispike"], a[href|="/pinkiemail"], a[href|="/chibiluna"], a[href|="/a
 {background-position: -100% 0%;}
 
 /* Grid pos 2,0 'motes */
-a[href|="/shiningcadancehug"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/twicider"], a[href|="/rainbowstache"], a[href|="/sparklelove"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/applewat"], a[href|="/proletariat"], a[href|="/pikachu"], a[href|="/sursilly"], a[href|="/cadsoawesome"], a[href|="/wheredidthemuffingo"]
+a[href|="/shiningcadancehug"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/twicider"], a[href|="/rainbowstache"], a[href|="/sparklelove"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/applewat"], a[href|="/proletariat"], a[href|="/pikachu"], a[href|="/sursilly"], a[href|="/cadsoawesome"], a[href|="/wheredidthemuffingo"], a[href|="/hoodiedash"]
 {background-position: -200% 0%;}
 
 /* Grid pos 0,1 'motes */
@@ -600,7 +600,7 @@ a[href|="/sombrarage"], a[href|="/sadshy"], a[href|="/cocosad"], a[href|="/nerdp
 {background-position: 0 -400%;}
 
 /* Grid pos 1,4 'motes */
-a[href|="/gildaconfused"], a[href|="/ajdoubt"], a[href|="/grimfluff"], a[href|="/nerdrarity"], a[href|="/lunapersona"], a[href|="/everythingisbait"], a[href|="/zecoradust"], a[href|="/colgatebraces"]
+a[href|="/gildaconfused"], a[href|="/ajdoubt"], a[href|="/grimfluff"], a[href|="/nerdrarity"], a[href|="/lunapersona"], a[href|="/everythingisbait"], a[href|="/zecoradust"], a[href|="/colgatebraces"], a[href|="/princesslenny"]
 {background-position: -100% -400%;}
 
 /* Grid pos 2,4 'motes */
