--- a/source-css/scootalounge.css
+++ b/source-css/scootalounge.css
@@ -8,6 +8,14 @@ a[href="/scootabloomhug"]{
     height:176px;
     background-image: url(%%scootbloomhug%%) !important;
 }
+[href="/scootawave"]{
+    display:block;
+    clear:none;
+    float:left;
+    width:184px;
+    height:200px;
+    background-image: url(%%scootawave%%) !important;
+}
 a[href="/scootabloomsmile"]{
     display:block;
     clear:none;
@@ -43,6 +51,14 @@ a[href="/scootaloodle"]{
     height:171px;
     background-image: url(%%scootaloodle%%) !important;
 }
+a[href="/scootathat"]{
+    display:block;
+    clear:none;
+    float:left;
+    width:195px;
+    height:200px;
+    background-image: url(%%scootathat%%) !important;
+}
 a[href="/chickeneating"]{
     display:block;
     clear:none;
@@ -76,14 +92,6 @@ a[href="/scootalk"]{
     background-image: url(%%aboutthisbig%%) !important;
 }
 
-a[href="/scootawave"]{
-    display:block;
-    clear:none;
-    float:left;
-    width:184px;
-    height:200px;
-    background-image: url(%%scootawave%%) !important;
-}
 
 a[href="/scootayes"],
 a[href="/scottaloo"],
@@ -190,7 +198,20 @@ a[href="/scootadodo"],
 a[href="/agentscoots"],
 a[href="/checkemscoots"],
 a[href="/tasteslikechicken"],
-a[href="/scootacornered"]
+a[href="/scootacornered"],
+a[href="/scootahappy"],
+a[href="/scootadoctor11"],
+a[href="/skydiverloo"],
+a[href="/supercreepaloo"],
+a[href="/ibelieveicanfly"],
+a[href="/scootabuzz"],
+a[href="/scootsalute"],
+a[href="/scootaderp2"],
+a[href="/eqgscoots"],
+a[href="/scootbeyond"],
+a[href="/wolfscoots"],
+a[href="/appleloo"],
+a[href="/appleloo2"]
 {
     display:block;
     clear:none;
@@ -207,6 +228,113 @@ a[href="/agentscoots"]{background-position:-300% 0%;}
 a[href="/checkemscoots"]{background-position:-400% 0%;}
 a[href="/tasteslikechicken"]{background-position:0% -100%;}
 a[href="/scootacornered"]{background-position:-100% -100%;}
+a[href="/scootahappy"]{background-position:-200% -100%;}
+a[href="/scootadoctor11"]{background-position:-300% -100%;}
+a[href="/skydiverloo"]{background-position:-400% -100%;}
+a[href="/supercreepaloo"]{background-position:0% -200%;}
+a[href="/ibelieveicanfly"]{background-position:-100% -200%;}
+a[href="/scootabuzz"]{background-position:-200% -200%;}
+a[href="/scootsalute"]{background-position:-300% -200%;}
+a[href="/scootaderp2"]{background-position:-400% -200%;}
+a[href="/eqgscoots"]{background-position:0% -300%;}
+a[href="/scootbeyond"]{background-position:-100% -300%;}
+a[href="/wolfscoots"]{background-position:-200% -300%;}
+a[href="/appleloo"]{background-position:-300% -300%;}
+a[href="/appleloo2"]{background-position:-400% -300%;}
+
+
+a[href="/appleloo3"],
+a[href="/appleloo4"],
+a[href="/awesomebuds"],
+a[href="/bestdayever"],
+a[href="/scootaglider"],
+a[href="/notquitedashie"],
+a[href="/gonnabeawesome"],
+a[href="/scootadashie"],
+a[href="/crusadingscoots"],
+a[href="/wrongneighborhood"],
+a[href="/scootarun"],
+a[href="/scootabuzzoff"],
+a[href="/scootabuzz3"],
+a[href="/scootachill"],
+a[href="/scootawhat"],
+a[href="/scootacutie"],
+a[href="/scootarear2"],
+a[href="/scootatwirl2"],
+a[href="/scootasit2"],
+a[href="/scootasing"]
+{
+    display:block;
+    clear:none;
+    float:left;
+    width:200px;
+    height: 200px;
+    background-image: url(%%sheet4%%) !important;
+}
+
+
+
+a[href="/appleloo3"]{background-position:0% 0%;}
+a[href="/appleloo4"]{background-position:-100% 0%;}
+a[href="/awesomebuds"]{background-position:-200% 0%;}
+a[href="/bestdayever"]{background-position:-300% 0%;}
+a[href="/scootaglider"]{background-position:-400% 0%;}
+a[href="/notquitedashie"]{background-position:0% -100%;}
+a[href="/gonnabeawesome"]{background-position:-100% -100%;}
+a[href="/scootadashie"]{background-position:-200% -100%;}
+a[href="/crusadingscoots"]{background-position:-300% -100%;}
+a[href="/wrongneighborhood"]{background-position:-400% -100%;}
+a[href="/scootarun"]{background-position:0% -200%;}
+a[href="/scootabuzzoff"]{background-position:-100% -200%;}
+a[href="/scootabuzz3"]{background-position:-200% -200%;}
+a[href="/scootachill"]{background-position:-300% -200%;}
+a[href="/scootawhat"]{background-position:-400% -200%;}
+a[href="/scootacutie"]{background-position:0% -300%;}
+a[href="/scootarear2"]{background-position:-100% -300%;}
+a[href="/scootatwirl2"]{background-position:-200% -300%;}
+a[href="/scootasit2"]{background-position:-300% -300%;}
+a[href="/scootasing"]{background-position:-400% -300%;}
+
+
+
+
+
+a[href="/scootajump4"],
+a[href="/scootabreak"],
+a[href="/scootayeah"],
+a[href="/scootabloomified"],
+a[href="/scootaplotting"],
+a[href="/scootahail"],
+a[href="/scootawhat"],
+a[href="/creepingloo"],
+a[href="/scootarace"],
+a[href="/scootastare"],
+a[href="/scootabark"],
+a[href="/scaredyscoots"],
+a[href="/scootamit"]
+{
+    display:block;
+    clear:none;
+    float:left;
+    width:200px;
+    height: 200px;
+    background-image: url(%%sheet5%%) !important;
+}
+a[href="/scootajump4"]{background-position:0% 0%;}
+a[href="/scootabreak"]{background-position:-100% 0%;}
+a[href="/scootayeah"]{background-position:-200% 0%;}
+a[href="/scootabloomified"]{background-position:-300% 0%;}
+a[href="/scootaplotting"]{background-position:-400% 0%;}
+a[href="/scootahail"]{background-position:0% -100%;}
+a[href="/scootawhat"]{background-position:-100% -100%;}
+a[href="/creepingloo"]{background-position:-200% -100%;}
+a[href="/scootarace"]{background-position:-300% -100%;}
+a[href="/scootastare"]{background-position:-400% -100%;}
+a[href="/scootabark"]{background-position:0% -200%;}
+a[href="/scaredyscoots"]{background-position:-100% -200%;}
+a[href="/scootamit"]{background-position:-200% -200%;}
+
+
 
 /*Emote Source Images in no particular order*/
 /*Image source here http://fc08.deviantart.net/fs70/i/2012/201/b/5/scootaloo_socks_by_sevenfates-d57xktx.png */
