--- a/source-css/sonatadusk.css
+++ b/source-css/sonatadusk.css
@@ -2,6 +2,7 @@
 .thing[data-fullname="t3_2jutko"] .entry a.title::before { font-size: medium !important; content: "Sonata by conbudou "; }
 
 body { background: url(%%background%%) no-repeat center; }
+body.wiki-page { background: none; }
 
 /*START-TACOS{color:red}
 body { background: url(%%tuesdaybackground%%) no-repeat fixed center bottom; }
@@ -438,7 +439,7 @@ a[href|="/rswagintosh"],
 a[href|="/rflutterfear"],a[href|="/rb00"],a[href|="/rppboring"],a[href|="/rb10"],a[href|="/rrarityyell"],a[href|="/rb20"],a[href|="/rfluttershy"],a[href|="/rb30"],a[href|="/rajcower"],a[href|="/rb01"],a[href|="/rajsly"],a[href|="/rb11"],a[href|="/reeyup"],a[href|="/rb21"],a[href|="/rrdsmile"],a[href|="/rb31"],a[href|="/rfluttersrs"],a[href|="/rb02"],a[href|="/rraritydress"],a[href|="/rb12"],a[href|="/rtakealetter"],a[href|="/rb22"],a[href|="/rrdwut"],a[href|="/rb32"],a[href|="/rppshrug"],a[href|="/rb03"],a[href|="/rspikenervous"],a[href|="/rnewrainbowdash"],a[href|="/rb13"],a[href|="/rnoooo"],a[href|="/rb23"],a[href|="/rdj"],a[href|="/rthreedog"],a[href|="/rb33"],a[href|="/rfluttershh"],a[href|="/rb04"],a[href|="/rflutteryay"],a[href|="/rb14"],a[href|="/rsquintyjack"],a[href|="/rb24"],a[href|="/rspikepushy"],a[href|="/rb34"],a[href|="/rajugh"],a[href|="/rb05"],a[href|="/rraritywut"],a[href|="/rb15"],a[href|="/rdumbfabric"],a[href|="/rb25"],a[href|="/rraritywhy"],a[href|="/rb35"],a[href|="/rtrixiesmug"],a[href|="/rb06"],a[href|="/rflutterwink"],a[href|="/rb16"],a[href|="/rrarityannoyed"],a[href|="/rb26"],a[href|="/rsoawesome"],a[href|="/rb36"],a[href|="/rajwut"],a[href|="/rb07"],a[href|="/rtwisquint"],a[href|="/rb17"],a[href|="/rraritywhine"],a[href|="/rb27"],a[href|="/rrdcool"],a[href|="/rb37"],a[href|="/rabwut"],a[href|="/rb08"],a[href|="/rmanspike"],a[href|="/rb18"],a[href|="/rcockatrice"],a[href|="/rb28"],a[href|="/rfacehoof"],a[href|="/rb38"],a[href|="/rrarityjudge"],a[href|="/rb09"],a[href|="/rrarityprimp"],a[href|="/rb19"],a[href|="/rtwirage"],a[href|="/rb29"],a[href|="/rppseesyou"],a[href|="/rb39"],
 a[href|="/rrdsitting"],a[href|="/rc00"],a[href|="/rrdhappy"],a[href|="/rc10"],a[href|="/rrdannoyed"],a[href|="/rc20"],a[href|="/rtrixiesad"],a[href|="/rc30"],a[href|="/rtwismug"],a[href|="/rc01"],a[href|="/rtwismile"],a[href|="/rc11"],a[href|="/rtwistare"],a[href|="/rc21"],a[href|="/rchangeling"],a[href|="/rc31"],a[href|="/rohhi"],a[href|="/rc02"],a[href|="/rparty"],a[href|="/rc12"],a[href|="/rhahaha"],a[href|="/rc22"],a[href|="/rrdscared"],a[href|="/rc32"],a[href|="/rflutterblush"],a[href|="/rc03"],a[href|="/rgross"],a[href|="/rc13"],a[href|="/rderpyhappy"],a[href|="/rtwidaw"],a[href|="/rc33"],a[href|="/rc23"],a[href|="/rajfrown"],a[href|="/rc04"],a[href|="/rhmmm"],a[href|="/rc14"],a[href|="/rjoy"],a[href|="/rc24"],a[href|="/rwhattheflut"],a[href|="/rc34"],a[href|="/rraritysad"],a[href|="/rc05"],a[href|="/rfabulous"],a[href|="/rc15"],a[href|="/rderp"],a[href|="/rc25"],a[href|="/rc35"],a[href|="/rcadencesmile"],a[href|="/rcadancesmile"],a[href|="/rshiningpride"],a[href|="/rc36"],a[href|="/rlouder"],a[href|="/rc06"],a[href|="/rlunasad"],a[href|="/rc16"],a[href|="/rderpyshock"],a[href|="/rc26"],a[href|="/rpinkamina"],a[href|="/rc07"],a[href|="/rloveme"],a[href|="/rc17"],a[href|="/rlunagasp"],a[href|="/rc27"],a[href|="/rscootaloo"],a[href|="/rfluttercry"],a[href|="/rc37"],a[href|="/rc08"],a[href|="/rcelestia"],a[href|="/rc18"],a[href|="/rangel"],a[href|="/rc28"],a[href|="/rallmybits"],a[href|="/rsneakybelle"],a[href|="/rc38"],a[href|="/rc09"],a[href|="/rzecora"],a[href|="/rc19"],a[href|="/rphotofinish"],a[href|="/rc29"],a[href|="/rppreally"],a[href|="/rc39"],
 a[href|="/rfillytgap"],a[href|="/rt00"],a[href|="/re00"],a[href|="/rrdhuh"],a[href|="/re10"],a[href|="/rsnails"],a[href|="/re20"],a[href|="/rtwisad"],a[href|="/re30"],a[href|="/rlyra"],a[href|="/rl00"],a[href|="/re01"],a[href|="/rbonbon"],a[href|="/re11"],a[href|="/rspitfire"],a[href|="/re21"],a[href|="/rcutealoo"],a[href|="/re02"],a[href|="/rhappyluna"],a[href|="/rlunahappy"],a[href|="/re12"],a[href|="/rsotrue"],a[href|="/re22"],a[href|="/rwahaha"],a[href|="/re03"],a[href|="/rsbstare"],a[href|="/re13"],a[href|="/rberry"],a[href|="/rpunchdrunk"],a[href|="/re23"],a[href|="/rhuhhuh"],a[href|="/re04"],a[href|="/rabsmile"],a[href|="/re14"],a[href|="/rdealwithit"],a[href|="/re24"],a[href|="/rnmm"],a[href|="/rblacksnooty"],a[href|="/rqueenmeanie"],a[href|="/rhokeysmokes"],a[href|="/re05"],a[href|="/rwhooves"],a[href|="/re15"],a[href|="/rrdsalute"],a[href|="/re25"],a[href|="/roctavia"],a[href|="/rwhomeverthisis"],a[href|="/re06"],a[href|="/rcolgate"],a[href|="/re16"],a[href|="/rcheerilee"],a[href|="/re26"],a[href|="/rajconfused"],a[href|="/rajbaffle"],a[href|="/rajtherapy"],a[href|="/re07"],a[href|="/rabhuh"],a[href|="/re17"],a[href|="/rlily"],a[href|="/rthehorror"],a[href|="/re27"],a[href|="/rtwiponder"],a[href|="/re08"],a[href|="/rspikewtf"],a[href|="/re18"],a[href|="/rawwyeah"],a[href|="/re28"],a[href|="/rgilda"],a[href|="/re09"],a[href|="/rdiscentia"],a[href|="/rdiscentiastare"],a[href|="/rdisstare"],a[href|="/re19"],a[href|="/rmacintears"],a[href|="/rbigmactears"],a[href|="/re29"], a[href|="/re31"], a[href|="/rlunamad"], a[href|="/re32"], a[href|="/rdiscordsad"], a[href|="/re33"], a[href|="/rmaud"], a[href|="/re34"], a[href|="/rpinkiepout"], a[href|="/rsmooze"], 
-a[href|="/rforrealzies"],a[href|="/rsonatabattle"],a[href|="/rsdbattle"],a[href|="/rsonatagrin"],a[href|="/rsdgrin"],a[href|="/rnaivesonata"],a[href|="/rnaivesd"],a[href|="/rsonatasmirk"],a[href|="/rsdsmirk"],a[href|="/rsonatasiren"],a[href|="/rsdsiren"],a[href|="/rsonatashrug"],a[href|="/rsdshrug"],a[href|="/rcutesonata"],a[href|="/rcutesd"],a[href|="/rconfidentsonata"],a[href|="/rconfidentsd"],a[href|="/rfearfulsonata"],a[href|="/rfearfulsd"],a[href|="/rsonatapunch"],a[href|="/rsdpunch"],a[href|="/rsonatawoah"],a[href|="/rsdwoah"],a[href|="/tacotuesday"],a[href|="/rsonataglee"],a[href|="/rsdglee"],a[href|="/rtacotuesday"],a[href|="/rsonatasmug"],a[href|="/rsdsmug"],a[href|="/rsonatawave"],a[href|="/rsdwave"],a[href|="/rsonatalunch"],a[href|="/rsdlunch"]
+a[href|="/rforrealzies"],a[href|="/rsonatabattle"],a[href|="/rsdbattle"],a[href|="/rsonatagrin"],a[href|="/rsdgrin"],a[href|="/rnaivesonata"],a[href|="/rnaivesd"],a[href|="/rsonatasmirk"],a[href|="/rsdsmirk"],a[href|="/rsonatasiren"],a[href|="/rsdsiren"],a[href|="/rsonatashrug"],a[href|="/rsdshrug"],a[href|="/rcutesonata"],a[href|="/rcutesd"],a[href|="/rconfidentsonata"],a[href|="/rconfidentsd"],a[href|="/rfearfulsonata"],a[href|="/rfearfulsd"],a[href|="/rsonatapunch"],a[href|="/rsdpunch"],a[href|="/rsonatawoah"],a[href|="/rsdwoah"],a[href|="/tacotuesday"],a[href|="/rsonataglee"],a[href|="/rsdglee"],a[href|="/rtacotuesday"],a[href|="/rsonatasmug"],a[href|="/rsdsmug"],a[href|="/rsonatawave"],a[href|="/rsdwave"],a[href|="/rsonatalunch"],a[href|="/rsdlunch"],a[href|="/rsonatawhatever"],a[href|="/rsdwhatever"],a[href|="/rholdthatthought"],a[href|="/rnoautotunesonata"],a[href|="/rnoautotunesd"],a[href|="/rsonatacrashingdown"],a[href|="/rsdcrashingdown"],a[href|="/rsonatamad"],a[href|="/rsdmad"],a[href|="/rsonataright"],a[href|="/rsdright"],a[href|="/rputyourhandstogether"],a[href|="/rsonatasorry"],a[href|="/rsdsorry"],a[href|="/rsonatapoint"],a[href|="/rsdpoint"]
 {
 -webkit-transform:scaleX(-1);
 -moz-transform:scaleX(-1);
@@ -501,6 +502,9 @@ a[href|="/sonataooh"],a[href|="/sdooh"]
 a[href|="/rsonataooh"],a[href|="/rsdooh"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%ponysonata-sheet%%)!important; background-position: -300% -300%;}
 
+a[href|="/wmsonata"],a[href|="/wmsd"]
+{display:block;clear:none;float:left;width:174px;height:200px;background-image:url(%%wmsonata%%)!important; background-position: 0 0;}
+
 a[href|="/sonatabattle"],a[href|="/sdbattle"],a[href|="/rsonatabattle"],a[href|="/rsdbattle"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: 0 0;}
 
@@ -545,6 +549,39 @@ a[href|="/sonatawave"],a[href|="/sdwave"],a[href|="/rsonatawave"],a[href|="/rsdw
 
 a[href|="/sonatalunch"],a[href|="/sdlunch"],a[href|="/rsonatalunch"],a[href|="/rsdlunch"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -200% -300%;}
+
+a[href|="/sonatawhatever"],a[href|="/sdwhatever"],a[href|="/rsonatawhatever"],a[href|="/rsdwhatever"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -300% -300%;}
+
+a[href|="/holdthatthought"],a[href|="/rholdthatthought"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: 0 -400%;}
+
+a[href|="/noautotunesonata"],a[href|="/noautotunesd"],a[href|="/rnoautotunesonata"],a[href|="/rnoautotunesd"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -100% -400%;}
+
+a[href|="/sonatacrashingdown"],a[href|="/sdcrashingdown"],a[href|="/rsonatacrashingdown"],a[href|="/rsdcrashingdown"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -200% -400%;}
+
+a[href|="/sonatamad"],a[href|="/sdmad"],a[href|="/rsonatamad"],a[href|="/rsdmad"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -300% -400%;}
+
+a[href|="/sonatadance"],a[href|="/sddance"],a[href|="/rsonatadance"],a[href|="/rsddance"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: 0 -500%;}
+
+a[href|="/sonataright"],a[href|="/sdright"],a[href|="/rsonataright"],a[href|="/rsdright"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -100% -500%;}
+
+a[href|="/putyourhandstogether"],a[href|="/rputyourhandstogether"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -200% -500%;}
+
+a[href|="/sonatasorry"],a[href|="/sdsorry"],a[href|="/rsonatasorry"],a[href|="/rsdsorry"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -300% -500%;}
+
+a[href|="/sonatapoint"],a[href|="/sdpoint"],a[href|="/rsonatapoint"],a[href|="/rsdpoint"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: 0 -600%;}
+
+a[href|="/sonataevilgrin"],a[href|="/sdevilgrin"],a[href|="/rsonataevilgrin"],a[href|="/rsdevilgrin"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -100% -600%;}
 
 a[href|="/sp"]{display:inline-block;padding-right:100%;width:0px;height:0px}
 
